# windchill-connector

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  client.rs  config.rs  error.rs  lib.rs  listing.rs  main.rs  operations.rs  upload.rs
